...
                          )),
                    )),
                const SizedBox(
                  height: 15,
                ),
                MyTextField(
                  key: const Key('email_text_field'),
                  hint: snapshot.data as String,
                  controller: _emailEditController,
                ),
                const SizedBox(
                  height: 15,
                ),
...
                    child: Padding(
                      padding: const EdgeInsets.all(16.0),
                      child: SizedBox(
                        height: 60,
                        width: 250,
                        child: ElevatedButton(
                          key: const Key('edit_email_submit'),
                          style: ElevatedButton.styleFrom(
                            textStyle: const TextStyle(
                              fontSize: 20,
                              fontWeight: FontWeight.bold,
                            ),
                            shape: RoundedRectangleBorder(
...
