...
        if (snapshot.connectionState == ConnectionState.waiting) {
          return const CircularProgressIndicator();
        } else if (snapshot.connectionState == ConnectionState.done) {
          if (snapshot.hasError || !validatePin(snapshot.data as String)) {
            //if snapshot has an error, it cannot read the user's PIN from the database therefore, prompts user to make a PIN
            return ElevatedButton(
              key: const Key('make_pin_submit'),
              style: ElevatedButton.styleFrom(
                textStyle: const TextStyle(
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
                ),
                shape: RoundedRectangleBorder(
...
                          )),
                    )),
                const SizedBox(
                  height: 15,
                ),
                MyTextField(
                  key: const Key('pin_text_field'),
                  hint: snapshot.data as String,
                  isNumericKeyboard: true,
                  controller: _pinEditController,
                ),
                const SizedBox(
                  height: 15,
...
