...
            email: await getCurrentUserEmail(), password: currentPassword);
        await auth.currentUser!
            .reauthenticateWithCredential(credentials)
            .then((value) {
          auth.currentUser!.updatePassword(newPassword);
        });
        return "Your password was successfully changed.";
      } on FirebaseAuthException {
        return 'Your current password is not correct. Please try again.';
      } catch (e) {
        return 'We are sorry, we could not change your password. Please try again.';
      }
    } else {
...
